# EMORELAY

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  audit-findings.md  deploy.sh  docker-compose.yml  fix-plan.md  mvp-followups-plan.md  plan.md  部署文档.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-5-report.md
crates/common/: Cargo.toml  build.rs
crates/common/proto/: control.proto
crates/common/src/: lib.rs
crates/common/tests/: proto_tunnel.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: agent.rs  config.rs  control.rs  dns.rs  lib.rs  main.rs  manager.rs  netcap.rs  probe.rs  retry.rs  select.rs  sniff.rs  stats.rs  store.rs  system.rs  upgrade.rs
crates/node-agent/src/limit/: conn_limit.rs  mod.rs  token_bucket.rs
crates/node-agent/src/relay/: mod.rs  splice.rs  tcp.rs  traits.rs  udp.rs
crates/node-agent/src/tunnel/: creds.rs  frame.rs  mod.rs  task.rs  tcp_transport.rs  testutil.rs  tls_transport.rs  transport.rs  wss_transport.rs
crates/panel-server/: Cargo.toml
crates/panel-server/src/: audit.rs  bootstrap.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
crates/panel-server/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs  token.rs
crates/panel-server/src/grpc/: commands.rs  dispatcher.rs  mod.rs  service.rs  session.rs  tunnel_dispatch.rs  tunnel_split.rs
crates/panel-server/src/models/: bandwidth_profile.rs  grant.rs  mod.rs  node.rs  rule.rs  settings.rs  tunnel.rs  user.rs
crates/panel-server/src/notify/: mod.rs
crates/panel-server/src/routes/: auth.rs  bandwidth_profiles.rs  diagnose.rs  health.rs  install.rs  mod.rs  nodes.rs  rules.rs  rules_io.rs  subscription.rs  system.rs  tunnels.rs  users.rs
crates/panel-server/src/sweeper/: mod.rs  node_offline.rs  stats_retention.rs  tunnel_creds.rs  user_quota.rs
crates/panel-server/src/tls/: ca.rs  crl.rs  issue.rs  mod.rs
crates/panel-server/tests/: agent_e2e.rs  api_auth.rs  api_auth_password.rs  api_bandwidth_profiles.rs  api_diagnose.rs  api_diagnose_limit.rs  api_grants.rs  api_install.rs  api_nodes.rs  api_nodes_credentials.rs  api_nodes_delete_protection.rs  api_nodes_stream.rs  api_reconcile_delete_race.rs  api_rules.rs  api_rules_io.rs  api_rules_port_alloc.rs  api_rules_protocol_conflict.rs  api_rules_proxy_protocol.rs  api_rules_quota.rs  api_rules_target_validation.rs  api_rules_user.rs  api_subscription.rs  api_system.rs  api_tunnel_dispatch.rs  api_tunnels.rs  api_users.rs  node_offline_sweeper.rs  notify_webhook.rs  stats_retention_sweeper.rs  tls_ca.rs  tunnel_creds_sweeper.rs  tunnel_e2e.rs  tunnel_split.rs  user_quota_sweeper.rs
crates/panel-server/tests/common/: mod.rs
docker/: Caddyfile.example  panel-server.Dockerfile  web-nginx.conf  web.Dockerfile
docs/: api.md  deployment.md  flux-panel-comparison-2026-06-13.md  p1-gap-review-2026-06-13.md  ux-review-2026-06-11.md
docs/superpowers/plans/: 2026-06-10-mvp-followups-phase-1.md  2026-06-10-mvp-followups-phase-2.md  2026-06-10-mvp-followups-phase-3.md  2026-06-10-mvp-followups.md  2026-06-11-p3b-data-plane.md  2026-06-11-p3c-tunnel-frontend-e2e.md  2026-06-11-p4-ux-fixes.md  2026-06-13-flux-parity.md
docs/superpowers/specs/: 2026-06-10-mvp-followups-design.md  2026-06-11-ux-fixes-design.md
migrations/: 0001_init.sql  0002_more_indexes.sql  0003_phase2.sql  0004_drop_rule_limits.sql  0005_node_certs.sql  0006_tunnels.sql  0007_tunnel_hop_port_unique.sql  0008_node_agent_version.sql  0009_user_grants.sql  0010_node_display_address.sql  0011_rule_max_connections.sql  0012_tunnel_creds_rotated_at.sql  0013_user_must_change_password.sql  0014_tunnel_billing.sql  0015_user_quota_reset_day.sql  0016_node_block_protocols.sql  0017_rule_multi_target.sql  0018_forward_rules_quota.sql  0019_rule_send_proxy_protocol.sql  0020_dualstack.sql
scripts/: echo_server.py  echo_udp.py  emorelay-agent.service  gen-dev-tls.sh  seed-dev.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css
web/src/components/: CopyButton.test.tsx  CopyButton.tsx  DiagnosePanel.tsx  ExportRulesButton.tsx  Pagination.test.tsx  Pagination.tsx  RegionBadge.tsx  Sparkline.tsx
web/src/lib/: action-label.test.ts  api-401.test.ts  api.test.ts  api.ts  auth-context.ts  auth.tsx  country.test.ts  country.ts  expiry-warning.test.ts  expiry-warning.ts  format-addr.test.ts  format-addr.ts  quota.test.ts  quota.ts  rule-txt.test.ts  rule-txt.ts  toast-context.ts  toast.test.tsx  toast.tsx  ui.test.tsx  ui.tsx  use-auth.ts  use-auto-refresh.ts  use-theme.ts  use-toast.ts
web/src/pages/: BandwidthProfiles.tsx  ChangePassword.tsx  Dashboard.test.tsx  Dashboard.tsx  ExportModal.test.tsx  ImportModal.test.tsx  Login.tsx  NodeDetail.test.tsx  NodeDetail.tsx  Nodes.tsx  RuleDetail.tsx  RuleForm.test.tsx  Rules.tsx  Settings.tsx  TunnelDetail.test.tsx  TunnelDetail.tsx  Tunnels.test.tsx  Tunnels.tsx  UserDashboard.tsx  Users.tsx
web/src/test/: setup.ts
