[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/panel-server",
    "crates/node-agent",
]

[workspace.package]
version = "0.3.16"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
