[package]
name = "node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
emorelay-common = { path = "../common" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tokio-stream = "0.1"
prost = "0.13"
dotenvy = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
# 节点资源采样(CPU/MEM/LoadAvg)与网络字节累计。
# 仅启用 system + network feature,避免拉入进程/磁盘/组件等不用的子集。
sysinfo = { version = "0.32", default-features = false, features = ["system", "network"] }
