[package]
name = "node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
emorelay-common = { path = "../common" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tokio-stream = "0.1"
prost = "0.13"
dotenvy = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
# 节点资源采样(CPU/MEM/LoadAvg)与网络字节累计。
# 仅启用 system + network feature,避免拉入进程/磁盘/组件等不用的子集。
sysinfo = { version = "0.32", default-features = false, features = ["system", "network"] }
# P3b 隧道 TLS/WSS transport。ring provider 与 tonic 0.12 tls 栈对齐。
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
# P3b WSS transport:ws 协议层 over 自管 TLS 流(不用 tungstenite 的 tls feature)。
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# P3c:隧道 server 端校验 client cert SAN = 上一跳(防同 CA 凭据横向连入)。
x509-parser = "0.16"
# P10b 一键升级:从面板下载新二进制(rustls 栈与 tonic 对齐) + sha256 校验。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

# P6.2 splice 零拷贝(Linux 专用),仅在 linux target 链接;其它平台回退用户态 pump。
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
# token bucket 测试用 start_paused 虚拟时钟(tokio::time::advance)。
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
# 隧道 TLS 测试用自签证书。
rcgen = "0.13"
