[package]
name = "panel-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
emorelay-common = { path = "../common" }
tonic = { version = "0.12", features = ["tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
prost = "0.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
url = "2"
tower_governor = "0.8.0"
# 出站 webhook 通知(notify 模块);rustls 避免 OpenSSL 链。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.13"
time = "0.3"
base64 = "0.22.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
# P3c 隧道 e2e:in-process 起真 agent。
node-agent = { path = "../node-agent" }
